# fastapi-with-logs-template

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.db
app/: main.py
app/api/v1/endpoints/: items.py
app/core/: config.py  logging_config.py
app/db/: base.py  crud.py  init_db.py  models.py  session.py
app/exceptions/: handlers.py
app/middleware/: logging_middleware.py
app/services/: redis_service.py
